# bin2mzf

./: .gitattributes  .gitignore  Makefile  README.md  README_cz.md
docs/cz/: Changelog.md  bin2mzf.md  mzf-cat.md  mzf-hdr.md  mzf-info.md  mzf-paste.md  mzf-strip.md
docs/en/: Changelog.md  bin2mzf.md  mzf-cat.md  mzf-hdr.md  mzf-info.md  mzf-paste.md  mzf-strip.md
src/libs/: CMakeLists.txt
src/tools/: CMakeLists.txt
src/tools/bin2mzf/: bin2mzf.c
src/tools/common/: argparse_helpers.c  argparse_helpers.h  bin2mzf_cli_version.h  cpm_constants.h  cpm_helpers.c  cpm_helpers.h  mzf_io.c  mzf_io.h  text_field.c  text_field.h
src/tools/mzf-cat/: mzf_cat.c
src/tools/mzf-hdr/: mzf_hdr.c
src/tools/mzf-info/: mzf_info.c
src/tools/mzf-paste/: mzf_paste.c
src/tools/mzf-strip/: mzf_strip.c
tests/: CMakeLists.txt
tests/cli/: helpers.sh  test_bin2mzf_align.sh  test_bin2mzf_basic.sh  test_bin2mzf_charset.sh  test_bin2mzf_cpm.sh  test_bin2mzf_header_only.sh  test_mzf_cat_basic.sh  test_mzf_hdr.sh  test_mzf_info_basic.sh  test_mzf_info_cpm.sh  test_mzf_info_format.sh  test_mzf_info_validate.sh  test_mzf_paste_basic.sh  test_mzf_strip_basic.sh
